<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hero_item_layout"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <ImageView
          android:id="@+id/hero_item_image"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_marginStart="3dp"
          android:contentDescription="@string/hero_item_icon"
          tools:src="@tools:sample/avatars"
          android:foreground="@drawable/layout_circle_border_element"/>
        <ImageView
            android:id="@+id/hero_item_type"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="33dp"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/hero_item_type"
            app:srcCompat="@drawable/cm_icon_role_warrior" />

        <ImageView
            android:id="@+id/hero_item_element"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="33dp"
            android:layout_marginStart="38dp"
            android:contentDescription="@string/hero_item_element"
            app:srcCompat="@drawable/cm_icon_prodark" />
    </RelativeLayout>

  <LinearLayout
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:orientation="vertical"
      android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/hero_item_name"
          android:layout_width="wrap_content"
          android:layout_height="20dp"
          android:layout_marginStart="5dp"
          tools:text="@tools:sample/lorem[3]" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RatingBar
            android:id="@+id/hero_item_rarity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:rating="5"
            android:numStars="5"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:isIndicator="true"
            style="@style/EpicSevenRatingBarSmall"
            />
        </LinearLayout>
      <ImageView
          android:id="@+id/hero_item_zodiac_icon"
          android:layout_width="25dp"
          android:layout_height="match_parent"
          android:layout_marginStart="10dp"
          android:layout_gravity="center"
          android:contentDescription="@string/hero_item_zodiac_icon"
          app:srcCompat="@drawable/zod_icon_aquarius" />

    </LinearLayout>

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      android:gravity="center"
      android:layout_gravity="center">

      <TextView
          android:id="@+id/hero_item_pve_tier_average"
          android:layout_width="50dp"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_gravity="center_horizontal"
          android:textColor="@color/colorPveFont"
          android:text=""
          android:textAppearance="@style/MenuHeroListTierScoreFont"/>
      <TextView
          android:id="@+id/hero_item_pvp_tier_average"
          android:layout_width="50dp"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_gravity="center_horizontal"
          android:textColor="@color/colorPvpFont"
          android:text=""
          android:textAppearance="@style/MenuHeroListTierScoreFont" />

  </LinearLayout>
</LinearLayout>