<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hero_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:background="@drawable/bg_hero"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/custom_bar_height"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/hero_profile_icon"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:contentDescription="@string/hero_profile_icon"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                tools:src="@tools:sample/avatars"
                android:foreground="@drawable/layout_circle_border"/>

            <RatingBar
                android:id="@+id/hero_profile_rarity"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_gravity="center"
                android:rating="5"
                android:numStars="5"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:isIndicator="true"
                style="@style/EpicSevenRatingBar"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/hero_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:textAlignment="center"
                tools:text="@tools:sample/lorem[3]" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/prof_bar"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hero_profile_type"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/hero_profile_type"
                    app:srcCompat="@drawable/cm_icon_role_warrior" />

                <TextView
                    android:id="@+id/hero_profile_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    tools:text="@tools:sample/lorem[3]" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/hero_profile_element_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/hero_profile_element"
                    app:srcCompat="@drawable/cm_icon_prodark" />

                <TextView
                    android:id="@+id/hero_profile_element_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    tools:text="@tools:sample/lorem[3]" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hero_profile_zodiac_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/hero_profile_type"
                    app:srcCompat="@drawable/zod_icon_aquarius" />

                <TextView
                    android:id="@+id/hero_profile_zodiac_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    tools:text="@tools:sample/lorem[3]" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>